# ros2_navigation

./: .gitignore  LICENSE  README.md
llm_perception/: package.xml  setup.cfg  setup.py
llm_perception/config/: waypoints.txt
llm_perception/llm_perception/: navigate_waypoint.py  safety_navigate.py
my_nav2_bringup/: CMakeLists.txt  package.xml
my_nav2_bringup/launch/: bringup_launch.py  complete_bringup_launch.py  custom_bringup_launch.py  navigation_launch.py  rviz_launch.py  testing.py
my_nav2_bringup/maps/: abn_b1_18Feb.yaml  world.pgm
my_nav2_bringup/params/: custom_params.yaml  custom_recovery_behavior.xml  navigate_to_pose_w_replanning_goal_patience_and_recovery.xml  safety_point.txt
my_nav2_bringup/rviz/: my_rviz_view.rviz
my_nav2_bringup/urdf/: turtlebot3_waffle.urdf
